--- a/portfolio.html
+++ b/portfolio.html
@@ -29,30 +29,30 @@
       <div class="container header-container">
         <nav class="navigation">
           <a class="logo link animate__bounceIn" href="index.html"
-            ><span class="logo-accent">Web</span>Studio</a
+            ><span class="logo__accent">Web</span>Studio</a
           >
           <ul class="menu list">
-            <li class="menu-item">
-              <a class="menu-link link" href="./index.html">Студия</a>
+            <li class="menu__item">
+              <a class="menu__link link" href="./index.html">Студия</a>
             </li>
-            <li class="menu-item">
-              <a class="menu-link link current" href="./portfolio.html">Портфолио</a>
+            <li class="menu__item">
+              <a class="menu__link link current" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="menu-item">
-              <a class="menu-link link" href="/">Контакты</a>
+            <li class="menu__item">
+              <a class="menu__link link" href="/">Контакты</a>
             </li>
           </ul>
         </nav>
 
         <!-- Contact us header block -->
-        <a class="contact-link link email" href="mailto:info@devstudio.com">
-          <svg class="email-icon" width="16" height="12">
+        <a class="header__contact-link link email" href="mailto:info@devstudio.com">
+          <svg class="header__email-icon" width="16" height="12">
             <use href="./img/icons.svg#icon-header-envelope"></use>
           </svg>
           info@devstudio.com
         </a>
-        <a class="contact-link link" href="tel:+380961111111">
-          <svg class="smartphone-icon" width="10" height="16">
+        <a class="header__contact-link link" href="tel:+380961111111">
+          <svg class="header__smartphone-icon" width="10" height="16">
             <use href="./img/icons.svg#icon-header-smartphone"></use>
           </svg>
           +38 096 111 11 11
@@ -294,8 +294,8 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-address-container">
-            <a class="logo foot-logo link" href="./index.html">
-              <span class="logo-accent">Web</span><span class="logo-text">Studio</span>
+            <a class="logo footer-logo link" href="./index.html">
+              <span class="logo__accent">Web</span><span class="logo-text">Studio</span>
             </a>
             <ul class="footer-list list">
               <li class="footer-item">
