bem class refactoring

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <main>
       <!-- Hero block -->
       <section class="hero">
-        <h1 class="main-title">Эффективные решения<br />для вашего бизнеса</h1>
+        <h1 class="hero__main-title">Эффективные решения<br />для вашего бизнеса</h1>
         <button class="modal-btn" type="button" data-modal-open>Заказать услугу</button>
       </section>
 
@@ -73,47 +73,47 @@
         <div class="container">
           <h2 class="advatages-title visually-hidden">Наши преимущества</h2>
           <ul class="advantages-list list">
-            <li class="advantages-list-item">
-              <div class="advantages-image-content">
-                <svg class="advantages-image-item">
+            <li class="advantages__list-item">
+              <div class="advantages__image-content">
+                <svg class="advantages__image-item">
                   <use href="./img/icons.svg#icon-advantages-satelite"></use>
                 </svg>
               </div>
-              <h3 class="advantages-list-item-title">Внимание к деталям</h3>
-              <p class="advantages-list-item-text">
+              <h3 class="advantages__list-item-title">Внимание к деталям</h3>
+              <p class="advantages__list-item-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="advantages-list-item">
-              <div class="advantages-image-content">
-                <svg class="advantages-image-item">
+            <li class="advantages__list-item">
+              <div class="advantages__image-content">
+                <svg class="advantages__image-item">
                   <use href="./img/icons.svg#icon-advantages-clock"></use>
                 </svg>
               </div>
-              <h3 class="advantages-list-item-title">Пунктуальность</h3>
-              <p class="advantages-list-item-text">
+              <h3 class="advantages__list-item-title">Пунктуальность</h3>
+              <p class="advantages__list-item-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="advantages-list-item">
-              <div class="advantages-image-content">
-                <svg class="advantages-image-item">
+            <li class="advantages__list-item">
+              <div class="advantages__image-content">
+                <svg class="advantages__image-item">
                   <use href="./img/icons.svg#icon-advantages-laptop-diagram"></use>
                 </svg>
               </div>
-              <h3 class="advantages-list-item-title">Планирование</h3>
-              <p class="advantages-list-item-text">
+              <h3 class="advantages__list-item-title">Планирование</h3>
+              <p class="advantages__list-item-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="advantages-list-item">
-              <div class="advantages-image-content">
-                <svg class="advantages-image-item">
+            <li class="advantages__list-item">
+              <div class="advantages__image-content">
+                <svg class="advantages__image-item">
                   <use href="./img/icons.svg#icon-advantages-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="advantages-list-item-title">Современные технологии</h3>
-              <p class="advantages-list-item-text">
+              <h3 class="advantages__list-item-title">Современные технологии</h3>
+              <p class="advantages__list-item-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
@@ -124,42 +124,42 @@
       <!-- What we do section -->
       <section class="duties section">
         <div class="container">
-          <h2 class="duties-title">Чем мы занимаемся</h2>
-          <ul class="duties-list list">
-            <li class="duties-item">
-              <div class="thumb">
+          <h2 class="duties__title">Чем мы занимаемся</h2>
+          <ul class="duties__list list">
+            <li class="duties__item">
+              <div class="duties__thumb">
                 <img
-                  class="duties-image"
+                  class="duties__image"
                   src="./img/what-we-do/img11.jpg"
                   alt="разработчик пишет код"
                   width="370"
                   height="294"
                 />
-                <p class="thumb-description">Десктопные приложения</p>
+                <p class="duties__thumb-description">Десктопные приложения</p>
               </div>
             </li>
-            <li class="duties-item">
-              <div class="thumb">
+            <li class="duties__item">
+              <div class="duties__thumb">
                 <img
-                  class="duties-image"
+                  class="duties__image"
                   src="./img/what-we-do/img22.jpg"
                   alt="дизайн макета сайта на мобильном устройстве"
                   width="370"
                   height="294"
                 />
-                <p class="thumb-description">Мобильные приложения</p>
+                <p class="duties__thumb-description">Мобильные приложения</p>
               </div>
             </li>
-            <li class="duties-item">
-              <div class="thumb">
+            <li class="duties__item">
+              <div class="duties__thumb">
                 <img
-                  class="duties-image"
+                  class="duties__image"
                   src="./img/what-we-do/img33.jpg"
                   alt="селекция цветов"
                   width="370"
                   height="294"
                 />
-                <p class="thumb-description">Дизайнерские решения</p>
+                <p class="duties__thumb-description">Дизайнерские решения</p>
               </div>
             </li>
           </ul>
