--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!-- Advantages section -->
       <section class="advantages section">
         <div class="container">
-          <h2 class="advatages-title visually-hidden">Наши преимущества</h2>
+          <h2 class="title visually-hidden">Наши преимущества</h2>
           <ul class="advantages-list list">
             <li class="advantages__list-item">
               <div class="advantages__image-content">
@@ -124,7 +124,7 @@
       <!-- What we do section -->
       <section class="duties section">
         <div class="container">
-          <h2 class="duties__title">Чем мы занимаемся</h2>
+          <h2 class="title">Чем мы занимаемся</h2>
           <ul class="duties__list list">
             <li class="duties__item">
               <div class="duties__thumb">
@@ -169,7 +169,7 @@
       <!-- Our team section -->
       <section class="team section">
         <div class="container">
-          <h2 class="team-title">Наша команда</h2>
+          <h2 class="title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-list-item">
               <img
@@ -366,7 +366,7 @@
       <section class="clients-section">
         <div class="container">
           <div class="clients-content">
-            <h2 class="clients-title">Постоянные клиенты</h2>
+            <h2 class="title">Постоянные клиенты</h2>
             <ul class="our-clients-list list">
               <li class="our-clients-item">
                 <a class="our-clients-link" href="/">
